--- a/generic.html
+++ b/generic.html
@@ -60,9 +60,10 @@
 					<br>
 					<br>
 				</div>
+
+
+				<!-- <iframe src="https://forms.gle/GRZPdHm7MH8M9kEU6" style="height:600px;width:100%;" title="reg form"></iframe> -->
 		</section>
-				
-		
 		<section id="four" class="wrapper style3 special">
 					<div class="container">
 						<header class="major major2">
@@ -74,6 +75,7 @@
 						</ul>
 					</div>
 	   	</section>
+
 
 
 <!--past events -->
