--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<h2 class="whoweare">Who we are</h2>
+								<h2 class="whoweare">Who we a</h2>
 								<p>The Bay Area has long been a center of technological development, but the industry is also notorious for the gender inequality it fosters. Superposition was founded on the principles of fixing those gaps in STEM, and its Fremont Chapter opened recently as a continuation of that goal - right in our community.</p>
 								<a href="https://lb.benchmarkemail.com/listbuilder/signupnew?UOpPXfYpHY7f4mvFP1y21%252F5pwVnAjsSIOy8zuvZiuUftO5iNRn8gS049TyW7spdJ" class="button" target="_blank">SUBSCRIBE TO OUR NEWSLETTER</a>
 							</div>
